--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "authors": [
     {
       "name": "Marzio",
-      "email": "tu-correo@example.com"
+      "email": "marzioperez@gmail.com"
     }
   ],
   "require": {
