--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     }
   ],
   "require": {
-    "php": "^8.4",
-    "laravel/framework": "^12.0",
+    "php": "^8.2|^8.3|^8.4",
+    "laravel/framework": "^11.0|^12.0",
     "filament/filament": "^4.0",
-    "livewire/livewire": "^3.0",
+    "livewire/livewire": "^3.5|^4.0",
     "spatie/laravel-medialibrary": "^11.0"
   },
   "autoload": {
