--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "require": {
     "php": "^8.4",
     "laravel/framework": "^12.0",
-    "filament/filament": "^4.0|^5.0",
+    "filament/filament": "^5.0",
     "livewire/livewire": "^4.0",
     "spatie/laravel-medialibrary": "^11.0"
   },
